--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="1v-WpHv8_7ZlRxFrIn-s-_rltshhFQxC4LysGY7cVVA" />
     <title ng-bind="title"></title>
   </head>
   <body>
